<resources>
    <string name="app_name">Notification Webhook</string>
    <string name="webhook_url_hint">Enter webhook URL</string>
    <string name="keywords_hint">Enter keywords to ignore (separate by comma)</string>
    <string name="save_settings">Save Settings</string>
    <string name="test">Test</string>
    <string name="service_status">Service Status</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="recent_notifications">Recent Notifications</string>
    <string name="status_sent">Sent</string>
    <string name="status_failed">Failed</string>
</resources>